@@ -56,6 +56,9 @@ Extension Modules
 Library
 -------
 
+- Bug #822974: Honor timeout in telnetlib.{expect,read_until}
+  even if some data are received.
+
 - Bug #1267547: Put proper recursive setup.py call into the
   spec file generated by bdist_rpm.
 
